Fix center alignment

--- a/src/app/shared/chart/percentage/percentage.component.scss
+++ b/src/app/shared/chart/percentage/percentage.component.scss
@@ -120,7 +120,7 @@ $configs: (
 
 .chart-container {
   float: left;
-  margin: 0 20px 20px 0;
+  margin: 0 10px 20px 10px;
   width: map-get($default, svgSize);
   h4 {
     text-align: center;
